added many things
yes i did
